# conn

./: .gitattributes  .gitignore  .project-status.md  CLAUDE.md  README.md  bootstrap.sh  config.toml  pyproject.toml
console/: app.js  index.html  style.css
docs/: 2026-07-05-adversarial-cleanup-review.md  2026-07-05-cleanup-execution-spec.md  2026-07-05-ux-craft-spec.md  2026-07-06-capability-spec.md  2026-07-06-gate-g-fable-brief.md  2026-07-07-roadmap.md  2026-07-08-identity-audio-spec.md  2026-07-09-verified-action-engine-spec.md  2026-07-12-voice-first-reliability-implementation-prompt.md  2026-07-12-voice-first-reliability-spec.md  2026-07-13-capable-navigation-implementation-plan.md  2026-07-13-capable-navigation-spec.md  2026-07-13-dogfood-failure-analysis.md  2026-07-16-conn-lab-implementation-plan.md  2026-07-16-conn-lab-platform-proof.md  2026-07-16-conn-lab-spec.md  2026-07-20-v1-capability-breadth-implementation-plan.md  2026-07-20-v1-capability-breadth-spec.md  DEPLOYMENT.md  LIVE_EVAL_CHECKLIST.md  MANUAL-TESTING.md  NEXT-SESSION.md  NORTH-STAR.md  STATE-OF-PLAY.md  STOP1-manual-drill.md  gpt-realtime-2-computer-agent-spec.md  idea-ledger.md  orchestration-ledger.md
evals/: intent_corpus.json  tasks.json
lab/: capability-matrix.json  frozen-failures.json  scenarios.json  v1-command-corpus.json  v1-supporting-coverage.json
macos/: .gitignore  AppIcon.icns  Info.plist  Package.swift  make-app.sh  make-fixture-app.sh
tests/: conftest.py  strict_realtime.py  test_action_contract.py  test_action_probe.py  test_action_provenance.py  test_audio_devices.py  (+54 more)
(+159 files in other folders)
